# VTK_registration

./: LICENSE  README.md
img/Sawbones/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm  IM-0001-0040.dcm  (+463 more)
img/SpineMesh/: SawbonesSpine.obj.mtl
src/: CMakeLists.txt  helperFunctions.cxx  helperFunctions.hxx  interactorStyler.cxx  interactorStyler.hxx  vtkRegistration.cxx
